--- a/python_package/requirements.txt
+++ b/python_package/requirements.txt
@@ -3,11 +3,10 @@ jax==0.7.1
 jaxlib==0.7.1
 requests
 torch@https://download.pytorch.org/whl/cpu/torch-2.9.0%2Bcpu-cp311-cp311-manylinux_2_28_x86_64.whl
-loguru
+loguru==0.7.3
 torch-xla@https://pypi.eng.aws.tenstorrent.com/torch-xla/torch_xla-2.9.0%2Bgit061c1e7-cp311-cp311-linux_x86_64.whl
 
 # TTNN + tracy requirements
-loguru>=0.6.0
 networkx>=3.1
 graphviz>=0.20.3
 seaborn>=0.13.2
