--- a/pytest.ini
+++ b/pytest.ini
@@ -29,3 +29,5 @@ markers =
     galaxy: marks test for galaxy (galaxy)
     # Multi-host Configuration
     multi_host_cluster: marks test for multi-host setups (llmbox)
+    # FileCheck
+    filecheck: marks test with FileCheck pattern files to validate generated MLIR
