Adding speecht5 vocoder to weekly (#3065)
Speecht5 vocoder model (`microsoft/speecht5_hifigan`) compiles
successfully with bad PCC (tracking issue
https://github.com/tenstorrent/tt-xla/issues/3064). Therefore I am
adding this model to nightly.

--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2659,3 +2659,7 @@ test_config:
         assert_pcc: false  # Actual PCC: 0.9693205147128082 - https://github.com/tenstorrent/tt-xla/runs/61718821565 TODO: pending investigation
       p150:
         assert_pcc: false  # Actual PCC: 0.9661477411303401 - https://github.com/tenstorrent/tt-xla/runs/61718495993 TODO: pending investigation
+
+  vocoder_speecht5/pytorch-hifigan-single_device-inference:
+    status: EXPECTED_PASSING
+    assert_pcc: false # PCC < 0.1, tracking issue https://github.com/tenstorrent/tt-xla/issues/3064
