[Initial] adopts->addopts in pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
 ;  https://github.com/tenstorrent/tt-xla/issues/2892, don't use long tracebacks
-adopts = --tb=short
+addopts = --tb=short
 
 markers =
     push: marks tests as push, to be executed on PR pipeline
