adding necessary permissions

--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -13,8 +13,8 @@ on:
 # set minimal set of deps needed
 permissions:
 #   contents: write
-#   actions: write
-#   id-token: write
+  actions: write
+  id-token: write
   packages: write
   checks: write
 
