--- a/.github/workflows/manual-release-tests.yml
+++ b/.github/workflows/manual-release-tests.yml
@@ -10,12 +10,12 @@ on:
         required: true
 
 # set minimal set of deps needed
-# permissions:
+permissions:
 #   contents: write
-#   actions: write
-#   id-token: write
-#   packages: write
-#   checks: write
+  actions: write
+  id-token: write
+  packages: write
+  checks: write
 
 jobs:
   build-image:
