qb2-blackhole initial CI testing changes
 - Add qb2-blackhole to supported_archs list to avoid error when CI passes --arch qb2-blackhole
 - tag 6 tests (3x single_device, 3x tensor_parallel) with qb2_test marker
   and add model-test-passing-qb2-trim.json to target them to start

--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -17,6 +17,7 @@ on:
           - 'model-test-full.json'
           - 'on-pr.json'
           - 'model-test-passing.json'
+          - 'model-test-passing-qb2-trim.json'
           - 'model-test-xfail.json'
           - 'model-test-experimental.json'
           - 'model-test-training-xfail-weekly.json'
