--- a/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
@@ -7,6 +7,7 @@ test_config:
   falcon/pytorch-tiiuae/Falcon3-7B-Base-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
     status: EXPECTED_PASSING
+    markers: [qb2_test]
 
   falcon/pytorch-tiiuae/Falcon3-10B-Base-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
@@ -24,7 +25,7 @@ test_config:
   gemma/pytorch-google/gemma-2-9b-it-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
     status: EXPECTED_PASSING
-    markers: [extended]
+    markers: [extended, qb2_test]
 
   gemma/pytorch-google/gemma-2-27b-it-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
@@ -48,6 +49,7 @@ test_config:
   llama/causal_lm/pytorch-llama_3_1_8b_instruct-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
     status: EXPECTED_PASSING
+    markers: [qb2_test]
 
   llama/causal_lm/pytorch-llama_3_8b_instruct-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
