--- a/.github/workflows/call-publish-release-wheel.yml
+++ b/.github/workflows/call-publish-release-wheel.yml
@@ -33,6 +33,10 @@ on:
         description: 'Release tag'
         value: ${{ jobs.publish-wheel.outputs.release-tag }}
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish-wheel:
     name: Publish wheels to pypi
