--- a/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
@@ -65,7 +65,12 @@ test_config:
     markers: [extended]
 
   qwen_3/causal_lm/pytorch-0_6b-tensor_parallel-inference:
-    supported_archs: [n300-llmbox]
+    supported_archs: [n300, n300-llmbox]
+    status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2550
+
+  qwen_3/causal_lm/pytorch-0_6b-tensor_parallel-training:
+    supported_archs: [n300, n300-llmbox]
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2550
 
