--- a/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
@@ -82,17 +82,20 @@ test_config:
 
   qwen_2_5_coder/causal_lm/jax-0_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: NOT_SUPPORTED_SKIP
+    status: EXPECTED_PASSING
+    assert_pcc: false
     reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=0.0073 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-1_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: NOT_SUPPORTED_SKIP
+    status: EXPECTED_PASSING
+    assert_pcc: false
     reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.054 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-1_5b_instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: NOT_SUPPORTED_SKIP
+    status: EXPECTED_PASSING
+    assert_pcc: false
     reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.025 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-3b-tensor_parallel-inference:
