--- a/.github/workflows/call-publish-release-wheel.yml
+++ b/.github/workflows/call-publish-release-wheel.yml
@@ -34,8 +34,12 @@ on:
         value: ${{ jobs.publish-wheel.outputs.release-tag }}
 
 permissions:
+  pages: write
   id-token: write
-  contents: read
+  contents: write
+  actions: write
+  packages: write
+  attestations: write
 
 jobs:
   publish-wheel:
