Initial qb2-blackhole arch Nightly CI support
 - Add qb2 specific nightly CI jobs (main branch only, limited CI resources)
 - Add qb2-blackhole to ALLOWED_ARCHES and default_archs in conftest.py
 - Add qb2-blackhole to supported_archs in 424 test config entries
 - Add 43 explicit qb2-blackhole arch_overrides (replaces hack from 81f82f9bd)
 - Add model-test-xfail-qb2.json
 - Add qb2-blackhole arch_overrides for 2x lower PCC (0.98) and 8x s3-bucket-missing fails

--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -134,6 +134,8 @@ test_config:
     arch_overrides:
       p150:
         status: EXPECTED_PASSING
+      qb2-blackhole:
+        status: EXPECTED_PASSING
       n150:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
@@ -141,6 +143,8 @@ test_config:
   qwen_2_5/causal_lm/pytorch-7b_instruct_1m-llm_decode-single_device-inference:
     arch_overrides:
       p150:
+        status: EXPECTED_PASSING
+      qb2-blackhole:
         status: EXPECTED_PASSING
       n150:
         status: NOT_SUPPORTED_SKIP
@@ -166,6 +170,8 @@ test_config:
     arch_overrides:
       p150:
         status: EXPECTED_PASSING
+      qb2-blackhole:
+        status: EXPECTED_PASSING
       n150:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
@@ -173,6 +179,8 @@ test_config:
   falcon/pytorch-tiiuae/falcon-7b-instruct-llm_decode-single_device-inference:
     arch_overrides:
       p150:
+        status: EXPECTED_PASSING
+      qb2-blackhole:
         status: EXPECTED_PASSING
       n150:
         status: NOT_SUPPORTED_SKIP
