--- a/tests/runner/test_config/jax/test_config_inference_data_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_data_parallel.yaml
@@ -5,159 +5,159 @@
 test_config:
 
   falcon/jax-tiiuae/Falcon3-1B-Base-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   falcon/jax-tiiuae/Falcon3-3B-Base-single_device-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 37748736 B DRAM buffer across 12 banks, where each bank needs to store 3145728 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
 
   gpt2/causal_lm/jax-base-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
     markers: [nightly]
 
   gpt2/causal_lm/jax-large-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   gpt2/causal_lm/jax-medium-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   gpt2/causal_lm/jax-xl-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
     markers: [large]
 
   llama/causal_lm/jax-1B_TINY-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   phi1/causal_lm/jax-microsoft/phi-1-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   phi1_5/causal_lm/jax-microsoft/phi-1_5-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   phi2/causal_lm/jax-microsoft/phi-2-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 16777216 B DRAM buffer across 12 banks, where each bank needs to store 1400832 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
 
   phi2/causal_lm/jax-microsoft/phi-2-pytdml-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 16777216 B DRAM buffer across 12 banks, where each bank needs to store 1400832 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
 
   phi3/causal_lm/jax-microsoft/Phi-3-mini-128k-instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "DRAM OOM"
     bringup_status: FAILED_RUNTIME
 
   phi3/causal_lm/jax-microsoft/Phi-3-mini-4k-instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "OOM DRAM"
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-0_5b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/jax-0_5b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/jax-1_5b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 34359738368 B DRAM buffer across 12 banks, where each bank needs to store 2863312896 B, but bank size is 1073741792 B "
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-1_5b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/jax-3b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Out of Memory: Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B "
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-3b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B "
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-7b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 271581184 B DRAM buffer across 12 banks, where each bank needs to store 22636544 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-7b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 271581184 B DRAM buffer across 12 banks, where each bank needs to store 22636544 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-0_5b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_2_5_coder/causal_lm/jax-1_5b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_2_5_coder/causal_lm/jax-1_5b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_2_5_coder/causal_lm/jax-3b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "DRAM OOM"
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-3b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "DRAM OOM"
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-7b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "DRAM OOM"
     bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-7b_instruct-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "DRAM OOM"
     bringup_status: FAILED_RUNTIME
 
   qwen_3/causal_lm/jax-0_6b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: EXPECTED_PASSING
 
   qwen_3/causal_lm/jax-1_7b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "DRAM OOM"
     bringup_status: FAILED_RUNTIME
 
   qwen_3/causal_lm/jax-4b-data_parallel-inference:
-    supported_archs: ["n300-llmbox"]
+    supported_archs: ["n300-llmbox", "qb2-blackhole"]
     status: NOT_SUPPORTED_SKIP
     reason: "Not enough space to allocate 10485760 B DRAM buffer across 12 banks, where each bank needs to store 876544 B, but bank size is 1073741792 B"
     bringup_status: FAILED_RUNTIME
