--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -72,6 +72,34 @@ jobs:
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
+  # QB2-specific jobs (only run on main branch)
+  # NOTE: QB2 jobs are restricted to main branch as a temporary workaround due to limited CI machines.
+  # This is a single test job that runs all passing tt-forge-models tests on QB2.
+  test_forge_models_passing_qb2:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # Only run on main branch and regardless of success or failure of `nightly_tests`:
+    if: (success() || failure()) && github.ref == 'refs/heads/main'
+    with:
+      test_suite: model-test-passing-qb2.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  # This is a single test job that runs all xfailing, skipped or placeholder tt-forge-models tests on QB2.
+  test_forge_models_xfail_qb2:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # Only run on main branch and regardless of success or failure of `nightly_tests`:
+    if: (success() || failure()) && github.ref == 'refs/heads/main'
+    with:
+      test_suite: model-test-xfail-qb2.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
   fail-notify:
     if: always()
     needs:
@@ -79,6 +107,8 @@ jobs:
       - test_full_model
       - test_forge_models_passing
       - test_forge_models_xfail
+      - test_forge_models_passing_qb2
+      - test_forge_models_xfail_qb2
       - build-image
       - build-ttxla
     runs-on: Ubuntu-latest
