--- a/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
@@ -21,6 +21,9 @@ test_config:
   gemma/pytorch-google/gemma-1.1-7b-it-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
     status: EXPECTED_PASSING
+    arch_overrides:
+      qb2-blackhole:
+        required_pcc: 0.98
 
   gemma/pytorch-google/gemma-2-9b-it-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
@@ -50,6 +53,9 @@ test_config:
     supported_archs: [n300-llmbox]
     status: EXPECTED_PASSING
     markers: [qb2_test]
+    arch_overrides:
+      qb2-blackhole:
+        required_pcc: 0.98
 
   llama/causal_lm/pytorch-llama_3_8b_instruct-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
