--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2659,3 +2659,7 @@ test_config:
   vocoder_speecht5/pytorch-hifigan-single_device-inference:
     status: EXPECTED_PASSING
     assert_pcc: false # PCC < 0.1, tracking issue https://github.com/tenstorrent/tt-xla/issues/3064
+
+  mistral/pixtral/pytorch-pixtral-12b-single_device-inference:
+    supported_archs: ["p150"]
+    status: EXPECTED_PASSING
