--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -93,6 +93,7 @@ jobs:
       ref: main
       perf_regression_check: true
       test-filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding,test_llama_3_1_70b_tp
+      runs-on-filter: All
 
   test_forge_models_push:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
