run on bm machines

--- a/.github/workflows/manual-benchmark.yml
+++ b/.github/workflows/manual-benchmark.yml
@@ -85,3 +85,4 @@ jobs:
       perf_regression_check: true
       test-filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding,test_llama_3_1_70b_tp
       runs-on-filter: All
+      sh-runner: false
